# SimpleBudget

./: TODO  pyproject.toml
SB/: asgi.py  settings.py  urls.py  wsgi.py
SimpleBudget/: apps.py  urls.py
SimpleBudget/backends/: JWTAuth.py  __init__.py
SimpleBudget/migrations/: 0001_initial.py  0002_alter_account_unique_together_and_more.py  0004_alter_expense_category_alter_expense_subcategory_and_more.py
SimpleBudget/models/: __init__.py  account.py  category.py  categoryMaxSpend.py  expense.py  income.py  subCategory.py
SimpleBudget/models/auth/: __init__.py  user.py
SimpleBudget/serializers/: __init__.py  category.py  expense.py  login.py
SimpleBudget/views/: __init__.py  category.py  expenses.py  login.py  registration.py  subCategory.py
backend/: .gitignore  pyproject.toml
backend/SimpleBudget/: admin.py
backend/SimpleBudget/backends/: JWTAuth.py
backend/SimpleBudget/migrations/: 0003_alter_category_name.py  0005_alter_expense_category_alter_expense_subcategory_and_more.py
backend/SimpleBudget/models/: account.py  category.py  categoryMaxSpend.py  expense.py
backend/SimpleBudget/models/auth/: user.py  userManager.py
backend/SimpleBudget/serializers/: category.py  registration.py  subCategory.py
backend/SimpleBudget/views/: category.py  login.py  subCategory.py
backend/configs/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/simplebudget/: package-lock.json  package.json
frontend/simplebudget/src/: index.js
sbfe/: package-lock.json  package.json
sbfe/src/: App.js
(+16 files in other folders)
